themes/ddbasic/sass/components/rs-carousel.scss
@import '../base.scss';

// ==========================================================================
// RS carousel overwrites
// ==========================================================================

.rs-carousel {
  position: relative;
  // Title
  .rs-carousel-title {
    @include font('header-large');
    @include span-columns(6);
    color: $color-text;
    margin-bottom: 60px;

    // Tablet
    @include media($tablet) {
      margin-bottom: 20px;
    }

    // Mobile
    @include media($mobile) {
      margin-bottom: 10px;
    }
  }
  // Items
  .rs-carousel-items {
    position: relative;
    padding-bottom: 80px;
    .rs-carousel-mask {
      // Item
      .rs-carousel-item {
        width: 260px;
        margin-right: 28px;
        text-align: left;
        &:last-child {
          margin-right: 0;
        }

        // Tablet
        @include media($tablet) {
          width: 218px;
          margin-right: 18px;
        }

        // Mobile
        @include media($mobile) {
          width: 218px;
          margin-right: 18px;
        }
      }
    }
    // Prev/Next
    .rs-carousel-action {
      position: absolute;
      &.rs-carousel-action-prev {
        @include arrow-button(arrow-left, $color-secondary);
        left: auto;
        right: 80px;

        // Mobile
        @include media($mobile) {
          right: 66px;
        }
      }
      &.rs-carousel-action-next {
        @include arrow-button(arrow-right, $color-secondary);
      }
      &.rs-carousel-action-prev,
      &.rs-carousel-action-next {
        @include transition(
          opacity $speed $ease
        );
        top: auto;
        bottom: 0;
        width: 68px;
        height: 54px;
        background-image: none;
        margin-top: 0;
        opacity: $disabled;

        // Mobile
        @include media($mobile) {
          width: 54px;
        }
        &::after {
          bottom: 0;
          right: 0;
          width: 100%;
          height: 100%;
          text-indent: 0;
        }
        // Hover
        &:not(.rs-carousel-action-active) {
          &:hover {
            cursor: default;
            &::after {
              background-color: $color-secondary;
              color: $charcoal-opacity-dark;
            }
          }
        }
        &.rs-carousel-action-active {
          opacity: 1;
        }
      }
    }
  }
  // Pagination
  .rs-carousel-pagination {
    display: none;
  }

  // Tabs
  .rs-carousel-tabs {
    position: absolute;
    top: 60px;
    left: 0;

    // Tablet
    @include media($tablet) {
      position: static;
      width: auto;
      padding-top: 0;
    }
    .rs-carousel-list-tabs {
      text-align: left;
      .rs-carousel-item {
        position: relative;
        display: inline-block;
        width: auto !important;
        margin: 0 20px 0 0;
        padding-bottom: 5px;
        a {
          @include transition(color $speed-fast $ease);
          @include font('base');
          padding: 0;
          color: $charcoal-opacity-dark;
          &::after {
            @include transition(height $speed-fast $ease);
            content: '';
            position: absolute;
            bottom: 0;
            left: 0;
            width: 100%;
            height: 0;
            background-color: $color-text;
          }
          .no-touch & {
            &:hover {
              color: $color-standard-text;
              &::after {
                height: 3px;
              }
            }
          }
        }
        &.active {
          a {
            position: static;
            color: $color-standard-text;
            &::after {
              height: 3px;
            }
          }
        }
      }

      // Tablet
      @include media($tablet) {
        display: none;
      }
    }
    .rs-carousel-select {
      display: none;
      width: calc(100% - 160px);
      float: left;
      margin-top: -54px;

      // Tablet
      @include media($tablet) {
        display: block;
      }

      // Mobile
      @include media($mobile) {
        width: calc(100% - 128px);
      }
    }
  }
}

